--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "react-devtools": "react-devtools"
   },
   "dependencies": {
+    "@expo-google-fonts/days-one": "^0.2.2",
     "expo": "~47.0.12",
+    "expo-app-loading": "~2.1.1",
+    "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5"
